--- a/旋转圆盘/index.css
+++ b/旋转圆盘/index.css
@@ -1,37 +1,37 @@
 .kuai1 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(40deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(40deg) translateZ(360px);
   background-image: url('1.jpeg');
 }
 .kuai2 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(80deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(80deg) translateZ(360px);
   background-image: url('2.jpeg');
 }
 .kuai3 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(120deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(120deg) translateZ(360px);
   background-image: url('3.jpeg');
 }
 .kuai4 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(160deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(160deg) translateZ(360px);
   background-image: url('4.jpeg');
 }
 .kuai5 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(200deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(200deg) translateZ(360px);
   background-image: url('5.jpeg');
 }
 .kuai6 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(240deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(240deg) translateZ(360px);
   background-image: url('6.jpeg');
 }
 .kuai7 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(280deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(280deg) translateZ(360px);
   background-image: url('7.jpeg');
 }
 .kuai8 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(320deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(320deg) translateZ(360px);
   background-image: url('8.jpeg');
 }
 .kuai9 {
-  transform: rotateX(-90deg) translateY(-40px) rotateY(360deg) translateZ(-360px);
+  transform: rotateX(-90deg) translateY(-40px) rotateY(360deg) translateZ(360px);
   background-image: url('9.jpeg');
 }
 #pan {
@@ -45,6 +45,7 @@
   margin: auto;
   transform-style: preserve-3d;
   transform: rotateX(70deg);
+  transition: all 1s;
 }
 #pan .kuai {
   transform-style: preserve-3d;
@@ -71,4 +72,30 @@ body {
   height: 100%;
   perspective: 1350px;
   background-color: #93496c;
+}
+.btn {
+  width: 300px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 200px;
+  margin: auto;
+}
+.btn #left,
+.btn #right {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  background-color: #0a2157;
+  color: #fff;
+}
+.btn #left {
+  left: 0;
+}
+.btn #right {
+  right: 0;
 }
